--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.5.3",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
